<resources>
    <string name="app_name">Retro Shopper</string>
    <string name="tab_home">Home</string>
    <string name="tab_shop">Shop</string>
    <string name="search_or_add">Search or add item</string>
    <string name="clear_search">Clear search</string>
    <string name="add_item">Add “%1$s”</string>
    <string name="no_stores_yet">No stores yet. Add the store you shop at to start a list.</string>
    <string name="add_store">Add store</string>
    <string name="store_name">Store name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="check_out">Check out</string>
    <string name="check_out_title">Finish shopping?</string>
    <plurals name="check_out_message">
        <item quantity="one">%d item in the cart will be marked as bought.</item>
        <item quantity="other">%d items in the cart will be marked as bought.</item>
    </plurals>
    <string name="section_in_cart">In cart</string>
    <string name="section_not_here">Not at this store?</string>
    <string name="aisle">Aisle %1$s</string>
    <string name="details_needed">Needed</string>
    <string name="available_at">Available at %1$s</string>
    <string name="aisle_label">Aisle</string>
    <string name="rename">Rename</string>
    <string name="rename_item">Rename item</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_item_confirm">Delete “%1$s” everywhere? Its aisles at every store will be forgotten.</string>
    <string name="name_taken">This name is already in use</string>
    <string name="store_menu">Store options</string>
    <string name="rename_store">Rename store</string>
    <string name="delete_store">Delete store</string>
    <string name="delete_store_confirm">Delete “%1$s”? Aisle and availability records for this store will be forgotten. Your items are kept.</string>
    <string name="home_empty">Your shopping list starts here.\nType an item name above to add it.</string>
    <string name="shop_empty">Nothing needed at this store right now.</string>
</resources>
